--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.application.name=demo
+spring.application.name=bankomant
 server.port=${PORT:8080}
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+
+spring.datasource.url=jdbc:hsqldb:mem:bankomat
+spring.datasource.driverClassName=org.hsqldb.jdbc.JDBCDriver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
