--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.application.name=bankomant
+spring.application.name=bankomat
 server.port=${PORT:8080}
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
-spring.datasource.url=jdbc:hsqldb:mem:bankomat
+spring.datasource.url=jdbc:hsqldb:file:./data/bankomat
 spring.datasource.driverClassName=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+spring.jpa.hibernate.ddl-auto=update
