--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>bankomat</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>bankomat</name>
-  <description>Demo project for Spring Boot</description>
+  <description>Bank-o-mata</description>
   <properties>
     <java.version>17</java.version>
   </properties>
